# lmstudio-claude-shim-proxy

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: main.py
src/lmstudio_claude_shim_proxy/: __init__.py  main.py
tests/: test_main.py
